# parallel

OpenMP_MPI/PI/: MPI_PI.c  OpenMP_MPI_PI.c  OpenMP_PI.c
OpenMP_MPI/PI2/: MPI_PI_2.c  OpenMP_MPI_PI_2.c  OpenMP_PI_2.c
OpenMP_MPI/knn/: MPI_knn.c  OpenMP_knn.c
cuda/knn/: data.txt  diabetes.txt  iris.txt  knn_gpu  knn_gpu.cu  targetclass.txt
cuda/matrix/: matrix  matrix.cu
cuda/rgb2gray/: CMakeLists.txt  rgb2gray.cu
