cmake_minimum_required(VERSION 2.8)
# 使用C++11
SET(CMAKE_CXX_STANDARD 11)
project(rgb2grey)
find_package(OpenCV REQUIRED)
option(ENABLE_CUDA "" ON)
find_package(CUDA REQUIRED)
if(CUDA_FOUND)
    include_directories(${CUDA_INCLUDE_DIRS})
endif()
CUDA_ADD_EXECUTABLE(rgb2gray rgb2gray.cu)
# add_executable(rgb2gray rgb2gray.cu)
target_link_libraries(rgb2gray ${OpenCV_LIBS})
